apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - homepage.raoshahzaib.site
      secretName: homepage-raoshahzaib-site-tls
  rules:
    - host: homepage.raoshahzaib.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
